@@ -381,7 +381,14 @@ print.unit <- function(x, ...) {
   this.length <- length(x)
   if (is.logical(index))
     index <- (1L:this.length)[index]
-  if (top && index > this.length)
+  # Allow for negative integer index
+  if (any(index < 0)) {
+      if (any(index > 0))
+          stop("Cannot mix signs of indices")
+      else
+          index <- (1L:this.length)[index]
+  }
+  if (top && any(index > this.length))
     stop("Index out of bounds (unit subsetting)")
   cl <- class(x)
   units <- attr(x, "unit")
@@ -406,7 +413,14 @@ print.unit <- function(x, ...) {
   this.length <- length(x)
   if (is.logical(index))
     index <- (1L:this.length)[index]
-  if (top && index > this.length)
+  # Allow for negative integer index
+  if (any(index < 0)) {
+      if (any(index > 0))
+          stop("Cannot mix signs of indices")
+      else
+          index <- (1L:this.length)[index]
+  }
+  if (top && any(index > this.length))
     stop("Index out of bounds (unit arithmetic subsetting)")
   switch(x$fname,
          "+"="["(x$arg1, (index - 1) %% this.length + 1, top=FALSE) +
@@ -425,7 +439,14 @@ print.unit <- function(x, ...) {
   this.length <- length(x)
   if (is.logical(index))
     index <- (1L:this.length)[index]
-  if (top && index > this.length)
+  # Allow for negative integer index
+  if (any(index < 0)) {
+      if (any(index > 0))
+          stop("Cannot mix signs of indices")
+      else
+          index <- (1L:this.length)[index]
+  }
+  if (top && any(index > this.length))
     stop("Index out of bounds (unit list subsetting)")
   cl <- class(x)
   result <- unclass(x)[(index - 1) %% this.length + 1]
