@@ -4,6 +4,8 @@ Changes from grid_2.9.0 to grid_2.10.0:
 1.  Added showViewport() function for displaying viewport trees
     graphically.
 
+2.  Fixed bug in unit() indexing;  negative integer indices now work.
+
 
 Changes from grid_2.8.0 to grid_2.9.0:
 ------------------------------------
